--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="yoga.jpg" class="img-fluid rounded" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -96,7 +96,7 @@
         </div>
         <div class="col-6">
           <img
-            src="images/weather.png"
+            src="weather.jpg"
             class="img-fluid rounded"
             alt="weather"
           />
@@ -105,8 +105,8 @@
       <div class="row mt-5">
         <div class="col-6">
           <img
-            src="images/yogurt.png"
-            class="img-fluid rounded"
+            src="yoghurt.jpg"
+            class="img-fluid round"
             alt="yoghurt"
           />
         </div>
