--- a/about.html
+++ b/about.html
@@ -74,21 +74,21 @@
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="images/yoga.png"
+            src="yoga.jpg"
             class="img-fluid p-2 shadow rounded"
             alt="yoga"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/weather.png"
+            src="weather.jpg"
             class="img-fluid p-2 shadow rounded"
             alt="weather"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/yogurt.png"
+            src="yoghurt.jpg"
             class="img-fluid p-2 shadow rounded"
             alt="yoghurt"
           />
